getData/test.log
2015-11-08 20:00:01
2015-11-08 20:01:01
  File "/home/snowdrop/py/test.py", line 2
    1import time
          ^
SyntaxError: invalid syntax
2015-11-08 20:03:01
